# hadoucan-fw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  STM32H750VB_FLASH.ld  STM32H750VB_RAM.ld  Toolchain_stm32h750_atollic_flash.cmake  Toolchain_stm32h750_atollic_ram.cmake  Toolchain_stm32h750_gcc_flash.cmake  Toolchain_stm32h750_gcc_ram.cmake  bootload.py  bootload_enc.py  bootload_enc_debug.py  enc_fw_public.sh  fdcan_bitrate.ods  features.txt  generate_cmake.sh  main.cpp  stm32h750_canusb.cfg  stm32h7_flash.ld  techspecs.txt
.github/workflows/: build.yml  build_ci.yml  build_release.yml  main.yml
cubemx_can_usb_fw/: can_usb_fw.ioc
cubemx_can_usb_fw_1_12_1/: cubemx_can_usb_fw_1_12_1.ioc
cubemx_can_usb_fw_1_4_0/: cubemx_can_usb_fw_1_4_0.ioc
hadoucan-fw/: CMakeLists.txt
hadoucan-fw/include/: FreeRTOSConfig.h  config-no-entropy.h  global_app_inst.hpp  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  sw_ver.hpp  tusb_config.h
hadoucan-fw/src/: CAN_USB_app.cpp  CAN_USB_app_bitrate_table.cpp  CAN_USB_app_config.cpp  CAN_USB_app_config.hpp  SJA1000_filter.cpp  SJA1000_filter.hpp  STM32_fdcan_tx.cpp  STM32_fdcan_tx.hpp  W25Q16JV_conf_region.hpp  freertos_stubs.cpp  global_app_inst.cpp  main.cpp  main_cube.c  newlib_stubs.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  sw_ver.cpp  syscalls.c  system_stm32h7xx.c
hadoucan-fw/src/lawicel/: Lawicel_parser.cpp  Lawicel_parser.hpp  Lawicel_parser_stm32.cpp  Lawicel_parser_stm32.hpp
hadoucan-fw/src/msg/: sm-1301_rpc.asn  sm-1301_rpc.c  sm-1301_rpc.h
hadoucan-fw/src/tasks/: LED_task.cpp  LED_task.hpp  Main_task.cpp  Main_task.hpp  Packet_pulse_task.cpp  Packet_pulse_task.hpp  STM32_fdcan_rx.cpp  STM32_fdcan_rx.hpp  System_mon_task.cpp  Task_instances.cpp  Task_instances.hpp  Timesync_task.cpp  Timesync_task.hpp  USB_lawicel_task.cpp  USB_lawicel_task.hpp  USB_poll.cpp  USB_poll.hpp  USB_rx_buffer_task.cpp  USB_rx_buffer_task.hpp  USB_tx_buffer_task.cpp  USB_tx_buffer_task.hpp
include/: FreeRTOSConfig.h  global_app_inst.hpp  hal_inst.h  hal_inst.hpp  main.h  spiffs_config.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  uart1_printf.hpp  usb_device.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
scripts/: build_ci.sh
src/: CAN_USB_app.cpp  CAN_USB_app.hpp  CAN_USB_app_bitrate_table.cpp  CAN_USB_app_bitrate_table.hpp  CAN_USB_app_config.cpp  CAN_USB_app_config.hpp  FreeRTOS_static_task.cpp  FreeRTOS_static_task.hpp  FreeRTOS_task.cpp  FreeRTOS_task.hpp  FreeRTOS_task_base.cpp  FreeRTOS_task_base.hpp  STM32_fdcan.cpp  STM32_fdcan.hpp  STM32_fdcan_rx.cpp  STM32_fdcan_rx.hpp  STM32_fdcan_tx.cpp  STM32_fdcan_tx.hpp  USB_RX_task.cpp  USB_RX_task.hpp  USB_TX_task.cpp  USB_TX_task.hpp  USB_buf.cpp  USB_buf.hpp  USB_rx_buffer_task.cpp  USB_rx_buffer_task.hpp  USB_tx_buffer_task.cpp  USB_tx_buffer_task.hpp  W25Q16JV.cpp  W25Q16JV.hpp  W25Q16JV_conf_region.hpp  boot_qspi.cpp  boot_qspi.hpp  freertos.c  freertos_new.cpp  freertos_stubs.c  freertos_stubs.cpp  global_app_inst.cpp  hal_inst.c  hal_inst.cpp  (+17 more)
src/freertos_util/: CMakeLists.txt  LICENSE  README.md
src/freertos_util/include/freertos_util/: BSema_static.hpp  Critical_section.hpp  Critical_section_isr.hpp  Mutex_base.hpp  Mutex_heap.hpp  Mutex_static.hpp  Queue_base.hpp  Queue_static.hpp  Queue_static_pod.hpp  Semaphore_base.hpp  Task_base.hpp  Task_heap.hpp  Task_static.hpp
src/freertos_util/include/freertos_util/object_pool/: Object_pool.hpp  Object_pool_fwd.hpp  Object_pool_node.hpp  Object_pool_node_fwd.hpp
src/freertos_util/src/: Critical_section.cpp  Critical_section_isr.cpp  Mutex_base.cpp  Mutex_heap.cpp  Mutex_static.cpp  Queue_base.cpp  Queue_static.cpp  Queue_static_pod.cpp  Task_base.cpp  Task_heap.cpp  Task_static.cpp
src/freertos_util/src/object_pool/: Object_pool.cpp  Object_pool_node.cpp
src/lawicel/: CAN_DLC.cpp  CAN_DLC.hpp  Lawicel_parser.cpp  Lawicel_parser.hpp  Lawicel_parser_stm32.cpp  Lawicel_parser_stm32.hpp  STM32_FDCAN_DLC.cpp  STM32_FDCAN_DLC.hpp  can_dlc.cpp  can_dlc.hpp
src/msg/: can_packet.asn  can_packet.c  can_packet.h
src/st_an3155/: ST_AN3155.cpp  ST_AN3155.hpp
src/tasks/: LED_task.cpp  LED_task.hpp  Logging_task.cpp  Logging_task.hpp  Main_task.cpp  Main_task.hpp  STM32_fdcan_rx.cpp  STM32_fdcan_rx.hpp  Status_task.cpp  Status_task.hpp  System_mon_task.cpp  System_mon_task.hpp  Task_instances.cpp  Task_instances.hpp  Timesync_task.cpp  Timesync_task.hpp  USB_lawicel_task.cpp  USB_lawicel_task.hpp  USB_poll.cpp  USB_poll.hpp  USB_rx_buffer_task.hpp
src/usb/: usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
